--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/sachinsaxena1996/angular_todo#readme",
   "devDependencies": {
-    "karma": "^4.0.0",
+    "angular-mocks": "^1.7.5",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^2.0.1"
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.2"
   }
 }
